# lili-modeler

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/engine/: animation.rs  commands.rs  materials.rs  mod.rs  modifiers.rs  nodes.rs  overlay.rs  physics.rs  renderer.rs  sculpt.rs  snapping.rs  undo.rs
src-tauri/src/io/: exporters.rs  importers.rs  mod.rs
src-tauri/src/mesh/: bmesh.rs  mod.rs  primitives.rs
src-tauri/src/render/: main.wgsl  mod.rs
src-tauri/src/scene/: mod.rs
src-tauri/src/ui/: mod.rs
